fix btm overlap form

--- a/front-fresh-fruit/src/styles/_informationform.css
+++ b/front-fresh-fruit/src/styles/_informationform.css
@@ -22,3 +22,7 @@
     color: red;
     size: 4px;
 }
+
+.col-reg-btn {
+    padding-bottom: 40px;
+}
